--- a/aza.html
+++ b/aza.html
@@ -7,6 +7,8 @@
 	<input type="text" id="fname" name="Fname"><br><br>
 	<label for="lname" >LASTNAME</label>
 	<input type="text" id="lname" name="lname"><br><br>
+	<label for="lname" >ADDRESS</label>
+	<input type="text" id="address" name="address"><br><br>
 	<label for="uname" >USERNAME</label>
 	<input type="text" id="Uname" name="Uname"><br><br>
 	<label for="password" >PASSWORD</label>
